--- a/Pages/Homepage.html
+++ b/Pages/Homepage.html
@@ -22,12 +22,13 @@ need the following: Gamepage.html Datapage.html Leaderboard.html
 </head>
 
 <!-- Page Body -->
-<div class = "container, text-center",>
-    <h1>
+<div class = "jumbotron text-center">
+    <h1 class = "text-center">
         Hello World
     </h1>
+    <body>
+        HELP ME PLEASE
+    </body>
 </div>
 
-<body>
-    HELP ME PLEASE
-</body>
+
