Styles and Main Menu
New and Improved stylesheet
New Pretty Main menu

--- a/Pages/Homepage.html
+++ b/Pages/Homepage.html
@@ -21,14 +21,21 @@ need the following: Gamepage.html Datapage.html Leaderboard.html
     <title>EXTREME BATTLESHIP</title>
 </head>
 
+
+
 <!-- Page Body -->
-<div class = "jumbotron text-center">
-    <h1 class = "text-center">
-        Hello World
-    </h1>
-    <body>
-        HELP ME PLEASE
-    </body>
-</div>
-
-
+<body>
+    <div class = "jumbotron text-center" id = "jumbo">
+            EXTREME  BATTLESHIP
+    </div>
+    <!-- Main Menu -->
+    <div class = "container text-center" id = "menu">
+        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button">New Game</button>
+        <p> </p>
+        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button">Load Game</button>
+        <p> </p>
+        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button">Multiplayer</button>
+        <p> </p>
+        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button">View Scoreboard</buton>
+    </div>
+</body>
