--- a/Pages/Leaderboard.html
+++ b/Pages/Leaderboard.html
@@ -10,17 +10,26 @@ to the database.
 <head>
     <!-- Meta Tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- CSS Stylesheet -->
+    <link rel = "stylesheet" href = "EchoStyle.css">
+
+    <!-- Bootstrap Link -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- Ubuntu Font Link -->
-    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
-    <!-- Londrina Solid Font Link -->
-    <link href='https://fonts.googleapis.com/css?family=Londrina Solid' rel='stylesheet'>
 
     <title>EXTREME BATTLESHIP</title>
 </head>
+
+
+
 <!-- Page Body -->
+<body>
+    <div class = "jumbotron text-center" id = "jumbo">
+        SCOREBOARD
+    </div>
+    <div>
+
+    </div>
 
 </body>
