--- a/Pages/Homepage.html
+++ b/Pages/Homepage.html
@@ -30,12 +30,20 @@ need the following: Gamepage.html Datapage.html Leaderboard.html
     </div>
     <!-- Main Menu -->
     <div class = "container text-center" id = "menu">
-        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button">New Game</button>
+        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button">
+            Singleplayer
+        </button>
         <p> </p>
-        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button">Load Game</button>
+        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button">
+            Load Game
+        </button>
         <p> </p>
-        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button">Multiplayer</button>
+        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button">
+            Multiplayer
+        </button>
         <p> </p>
-        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button">View Scoreboard</buton>
+        <button class="btn btn-secondary btn-lg btn-block" id = "menu-button" role = "button">
+            View Scoreboard
+        </buton>
     </div>
 </body>
