--- a/Pages/Leaderboard.html
+++ b/Pages/Leaderboard.html
@@ -18,7 +18,7 @@ to the database.
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>EXTREME BATTLESHIP</title>
+    <title>EXTREME SCOREBOARD</title>
 </head>
 
 
@@ -29,7 +29,43 @@ to the database.
         SCOREBOARD
     </div>
     <div>
+        <div class = "col">
 
+        </div>
+        <div class = "col">
+            <table class = "table text-center" id = "scoretable">
+                <thead>
+                    <tr>
+                        <th scope = "col">Rank</th>
+                        <th scope = "col">Name</th>
+                        <th scope = "col">Score</th>
+                        <th scope = "col">Time</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td scope = "row">1st</td>
+                        <td>Nathan</td>
+                        <td>10000000</td>
+                        <td>0:00.00</td>
+                    </tr>
+                    <tr>
+                        <td scope = "row">2nd</td>
+                        <td>INTERFACE</td>
+                        <td>WITH</td>
+                        <td>DATABASE</td>
+                    </tr>
+                    <tr>
+                        <td scope = "row">3rd</td>
+                        <td>TO FILL</td>
+                        <td>THIS TABLE</td>
+                        <td>WITH REAL DATA</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class = "col">
+
+        </div>        
     </div>
-
 </body>
